# askchomsky

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  ask.py  chainlit.md  main.py  pyproject.toml  run_chainlit.py  start.sh
.github/workflows/: trufflehog.yml
backend/: __init__.py  api.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/components/: FlowCanvas.tsx  PipelineNode.tsx  QuestionInput.tsx
frontend/hooks/: useQueryStream.ts
frontend/types/: pipeline.ts
lightrag_store/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
