[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "askchomsky"
version = "0.1.0"
description = "AskChomsky RAG backend and tools"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "datasets>=4.8.2",
    "langfuse>=4.0.1",
    "lightrag-hku>=1.4.11",
    "llama-index-core>=0.14.18",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-openai>=0.7.2",
    "numpy>=2.4.3",
    "poetry>=2.3.2",
    "python-dotenv>=1.2.2",
]

[tool.setuptools.packages.find]
include = ["backend"]
exclude = ["frontend", "frontend.*"]
